test/bad/generators/nested03.px

func f() def
    func g() def
        yield true
    g()

f()
